force-app/main/default/objects/Account/fields/Snow_Removal__c.field-meta.xml
<CustomField>
    <fullName>Snow_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Snow Removal</label>
    <type>Checkbox</type>
</CustomField>