force-app/main/default/objects/Account/fields/Sod_Installation__c.field-meta.xml
<CustomField>
    <fullName>Sod_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sod Installation</label>
    <type>Checkbox</type>
</CustomField>