force-app/main/default/objects/Account/fields/Sprinkler_Winterization__c.field-meta.xml
<CustomField>
    <fullName>Sprinkler_Winterization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sprinkler Winterization</label>
    <type>Checkbox</type>
</CustomField>