force-app/main/default/objects/Account/fields/Status_Change_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date_Time__c</fullName>
    <description>Auto Time stamp of the date and time an Account Status was changed.</description>
    <label>Status Change Date/Time</label>
    <type>DateTime</type>
</CustomField>