force-app/main/default/objects/Account/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>Reason for selecting status</description>
    <inlineHelpText>Note the Reason for selecting the Status from the Available Values</inlineHelpText>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Past Due Balance</fullName>
            </value>
            <value>
                <fullName>Deceptive Photos</fullName>
            </value>
            <value>
                <fullName>Disintermediation</fullName>
            </value>
            <value>
                <fullName>Unprofessional</fullName>
            </value>
            <value>
                <fullName>Unresponsive &gt; 2 Years</fullName>
            </value>
            <value>
                <fullName>Consistent Poor Quality</fullName>
            </value>
            <value>
                <fullName>No Longer in Business</fullName>
            </value>
            <value>
                <fullName>No Communication</fullName>
            </value>
            <value>
                <fullName>Account Not Fully Set Up</fullName>
            </value>
            <value>
                <fullName>Not Interested In Working With TaskEasy</fullName>
            </value>
            <value>
                <fullName>No Availability</fullName>
            </value>
            <value>
                <fullName>Personal Emergency</fullName>
            </value>
            <value>
                <fullName>No Work Available</fullName>
            </value>
            <value>
                <fullName>Off-Season</fullName>
            </value>
            <value>
                <fullName>Finance Implications (Lien)</fullName>
            </value>
            <value>
                <fullName>Insurance Claim - Theft</fullName>
            </value>
            <value>
                <fullName>Expired/Invalid Credit Card</fullName>
            </value>
            <value>
                <fullName>Insurance Expired</fullName>
            </value>
            <value>
                <fullName>Insurance Expiring</fullName>
            </value>
            <value>
                <fullName>Payment Issues</fullName>
            </value>
            <value>
                <fullName>Quality Concerns</fullName>
            </value>
            <value>
                <fullName>Coverage Concerns</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>New Name</fullName>
            </value>
            <value>
                <fullName>Bought/Sold</fullName>
            </value>
            <value>
                <fullName>No active properties</fullName>
            </value>
            <value>
                <fullName>Team Disabled</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Limited Capacity</fullName>
            </value>
            <value>
                <fullName>Routing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>