force-app/main/default/objects/Account/fields/Stripe_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stripe Enabled</label>
    <type>Checkbox</type>
</CustomField>