force-app/main/default/objects/Account/fields/Stripe_Status__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Status__c</fullName>
    <label>Stripe Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Account</fullName>
            </value>
            <value>
                <fullName>Incomplete Account</fullName>
            </value>
            <value>
                <fullName>Account Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>