force-app/main/default/objects/Account/fields/TE_User_Id__c.field-meta.xml
<CustomField>
    <fullName>TE_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>TE User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>