force-app/main/default/objects/Account/fields/Te_User_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Te_User_ID_Text__c</fullName>
    <description>TE User ID without comma (original is number field)</description>
    <formula>TEXT(TE_User_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Te User ID (Text)</label>
    <type>Text</type>
</CustomField>