force-app/main/default/objects/Account/fields/TE_Workcrew_Id__c.field-meta.xml
<CustomField>
    <fullName>TE_Workcrew_Id__c</fullName>
    <externalId>true</externalId>
    <label>TE Workcrew Id</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>