force-app/main/default/objects/Account/fields/Team_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Team Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>