force-app/main/default/objects/Account/fields/TEAM_ID__c.field-meta.xml
<CustomField>
    <fullName>TEAM_ID__c</fullName>
    <label>Team ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>