force-app/main/default/objects/Account/fields/Test_Program_Participation__c.field-meta.xml
<CustomField>
    <fullName>Test_Program_Participation__c</fullName>
    <label>Test Program Participation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-App Additional Funds</fullName>
            </value>
            <value>
                <fullName>On-Demand Jobs</fullName>
            </value>
            <value>
                <fullName>Contractor Minimum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>