force-app/main/default/objects/Account/fields/Total_Portfolio_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Portfolio_Count__c</fullName>
    <description>How many properties does this company manage? This includes occupied, unoccupied, commercial, apartments buildings, etc.</description>
    <label>Total Portfolio Count</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>