force-app/main/default/objects/Account/fields/Transferred_to_Atradius__c.field-meta.xml
<CustomField>
    <fullName>Transferred_to_Atradius__c</fullName>
    <label>Transferred to Atradius?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>