force-app/main/default/objects/Account/fields/Tree_Removal__c.field-meta.xml
<CustomField>
    <fullName>Tree_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tree Removal</label>
    <type>Checkbox</type>
</CustomField>