force-app/main/default/objects/Account/fields/Tree_Trimming__c.field-meta.xml
<CustomField>
    <fullName>Tree_Trimming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tree Trimming</label>
    <type>Checkbox</type>
</CustomField>