force-app/main/default/objects/Account/fields/Utilize_Region_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Utilize_Region_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilize Region Assignments</label>
    <type>Checkbox</type>
</CustomField>