force-app/main/default/objects/Account/fields/Vertex__BillingAddressValid__c.field-meta.xml
<CustomField>
    <fullName>Vertex__BillingAddressValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Address Valid</label>
    <type>Checkbox</type>
</CustomField>