force-app/main/default/objects/Account/fields/Vertex__ShippingAddressValid__c.field-meta.xml
<CustomField>
    <fullName>Vertex__ShippingAddressValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Address Valid</label>
    <type>Checkbox</type>
</CustomField>