force-app/main/default/objects/Account/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>Primary vertical offered by the contractor.</description>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleaning Service</fullName>
            </value>
            <value>
                <fullName>Lawn Service</fullName>
            </value>
            <value>
                <fullName>Pool Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>