force-app/main/default/objects/Account/fields/W_9_Status__c.field-meta.xml
<CustomField>
    <fullName>W_9_Status__c</fullName>
    <label>W-9 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Not Verified</fullName>
            </value>
            <value>
                <fullName>No W9 on file</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>