force-app/main/default/objects/Account/fields/Weed_Application_Removal__c.field-meta.xml
<CustomField>
    <fullName>Weed_Application_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weed Application / Removal</label>
    <type>Checkbox</type>
</CustomField>