force-app/main/default/objects/Account/fields/WorkWave_Performer_ID__c.field-meta.xml
<CustomField>
    <fullName>WorkWave_Performer_ID__c</fullName>
    <label>WorkWave Performer ID</label>
    <length>180</length>
    <type>Text</type>
</CustomField>