force-app/main/default/objects/Account/fields/Year_Business_Started__c.field-meta.xml
<CustomField>
    <fullName>Year_Business_Started__c</fullName>
    <description>What year did the business start?</description>
    <label>Year Business Started</label>
    <length>4</length>
    <type>Text</type>
</CustomField>