force-app/main/default/objects/Account/recordTypes/Client_Account.recordType-meta.xml
<RecordType>
    <fullName>Client_Account</fullName>
    <active>true</active>
    <label>Client</label>
</RecordType>