force-app/main/default/objects/Account/recordTypes/Client_Market.recordType-meta.xml
<RecordType>
    <fullName>Client_Market</fullName>
    <active>true</active>
    <label>Client Market</label>
</RecordType>