force-app/main/default/objects/Account/recordTypes/Consumer_Account.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Account</fullName>
    <active>true</active>
    <label>Consumer Account</label>
</RecordType>