force-app/main/default/objects/Account/recordTypes/Contractor_Account.recordType-meta.xml
<RecordType>
    <fullName>Contractor_Account</fullName>
    <active>true</active>
    <label>Contractor</label>
</RecordType>