force-app/main/default/objects/Account/recordTypes/Workcrew.recordType-meta.xml
<RecordType>
    <fullName>Workcrew</fullName>
    <active>true</active>
    <label>Workcrew</label>
</RecordType>