force-app/main/default/objects/Account/validationRules/Account_Name_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Read_Only</fullName>
    <active>true</active>
    <description>Read Only for all profiles &lt;&gt; Admin, Secondary Admin</description>
    <errorConditionFormula>AND(
ISCHANGED( Name ),
OR(
NOT($Profile.Name = &quot;System Administrator&quot;)), 
NOT($Profile.Name = &quot;Secondary Administrator&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot change the name of this account, consider creating a new account instead.</errorMessage>
</ValidationRule>